Fix whitespace issue

--- a/app/assets/stylesheets/components/music_player.scss
+++ b/app/assets/stylesheets/components/music_player.scss
@@ -4,8 +4,8 @@
   justify-content: space-between;
   bottom: 0;
   width: 100vw;
-  // height: 11vh;
-  height: 71px;
+  height: 11vh;
+  // height: 71px;
   background: $lighter-background;
   color: $white;
   font-family: $sans-serif;
